LIVIJUKU-1074 - lisää asiakirjamalli

--- a/app/scripts/views/yhteinen/asiakirjamalli.html
+++ b/app/scripts/views/yhteinen/asiakirjamalli.html
@@ -25,7 +25,7 @@
       </form-group>
       <form-group label="Hakemustyyppi" class="col-md-6 col-lg-4">
         <ol id="hakemustyyppitunnus" ng-model="asiakirjamalli.hakemustyyppitunnus"
-            title="Valitse asiakirjamallin voimaantulovuosi" class="nya-bs-select" size="20">
+            title="Valitse asiakirjamallin hakemustyyppi" class="nya-bs-select" size="20">
           <li nya-bs-option="hakemustyyppi in hakemustyypit" data-value="hakemustyyppi.id">
             <a>{{ hakemustyyppi.nimi }}</a>
           </li>
@@ -33,7 +33,7 @@
       </form-group>
       <form-group label="Organisaatiolaji" class="col-md-6 col-lg-4">
         <ol id="organisaatiolajitunnus" ng-model="asiakirjamalli.organisaatiolajitunnus"
-            title="Valitse organisaatiolaji" class="nya-bs-select" size="20">
+            title="Valitse asiakirjamallin organisaatiolaji" class="nya-bs-select" size="20">
           <li nya-bs-option="organisaatiolaji in organisaatiolajit" data-value="organisaatiolaji.id">
             <a>{{ organisaatiolaji.nimi }}</a>
           </li>
