LIVIJUKU-1074 - asiakirjamallien kuvaus

--- a/app/scripts/views/yhteinen/asiakirjamallit.html
+++ b/app/scripts/views/yhteinen/asiakirjamallit.html
@@ -1,6 +1,10 @@
 <div class="container">
   <h1>Asiakirjamallit</h1>
-
+  <p>
+    Asiakirjamallien pohjalta täydennetään järjestelmän muodostamat asiakirjat.
+    Hakemukselle valitaan uusin hakemustyyppiin ja organisaatiolajiin soveltuva asiakirjamalli,
+    joka tulee voimaan hakemuskautena tai aikaisemmin.
+  </p>
   <h3>Hakemusasiakirjat</h3>
   <div ng-if="!isEmpty(hakemusasiakirjamallit)">
     <table st-table="display" st-safe-src="hakemusasiakirjamallit" class="table table-condensed">
