LIVIJUKU-1074 - asiakirjamallien oikeudet

--- a/app/scripts/components/userDropdown/index.html
+++ b/app/scripts/components/userDropdown/index.html
@@ -16,7 +16,7 @@
         Asetukset
         </a>
       </li>
-      <li ng-show="sallittu(user, 'view-hakemuskausi')">
+      <li ng-show="sallittu(user, 'view-asiakirjamalli')">
         <a ui-sref-active="is-active" ui-sref="app.asiakirjamallit">
           Asiakirjamallit
         </a>
