--- a/app/scripts/components/ely/maararahatarpeet/index.html
+++ b/app/scripts/components/ely/maararahatarpeet/index.html
@@ -1,6 +1,6 @@
 <ng-form id="maararahatarpeet-form" name="maararahatarpeetForm" class="maararahatarpeet">
 
-  <h4>Joukkoliikennetuki kunnille</h4>
+  <h4>Kunnille myönnettävä valtionavustus</h4>
 
   <div class="row">
     <div class="col-md-3">
