LIVIJUKU-1077 - Käyttäjät valikkoa ei näytetä, jos käyttäjällä ei ole oikeutta nähdä ei-livi käyttäjiä.

--- a/app/scripts/components/userDropdown/index.html
+++ b/app/scripts/components/userDropdown/index.html
@@ -21,7 +21,7 @@
           Asiakirjamallit
         </a>
       </li>
-      <li>
+      <li ng-show="sallittu(user, 'view-non-livi-kayttaja')">
         <a ui-sref-active="is-active" ui-sref="app.yhteinen.kayttajatiedot">
         Käyttäjät
         </a>
