--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -1,6 +1,8 @@
 @import './loading-bar.css'
 @import './ui-grid.min.css'
 @import './vis.css'
+@import '../../node_modules/angular/angular-csp.css'
+@import '../../node_modules/angular-ui-bootstrap/dist/ui-bootstrap-csp.css'
 @import '../../node_modules/simplemde/dist/simplemde.min.css'
 @import '../../node_modules/@fortawesome/fontawesome-free/css/all.min.css'
 @import './nv.d3.styl'
