--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -5,6 +5,7 @@
 @import '../../node_modules/angularjs-slider/dist/rzslider.css'
 @import '_variables'
 @import '_components'
+@import '_views'
 
 h1
   font-size: 32px
