--- a/app/scripts/components/kilpailutus-poistodialogi/index.html
+++ b/app/scripts/components/kilpailutus-poistodialogi/index.html
@@ -1,11 +1,11 @@
 <div class="modal-header">Poista liikennöintisopimus / kilpailutus</div>
 <div class="modal-body">
-  <div class="row">
-    <div class="col-md-12">
-      <p>Oletko varma, että haluat poistaa kyseisen liikennöintisopimuksen / kilpailutuksen?</p>
-      <!-- <p><span class="label label-danger" style="white-space: normal; line-height: 2;">Tiedäthän, että toimintoa ei voi peruuttaa ja vastattuasi kysymykseen myöntävästi kyseinen liikennöintisopimus / kilpailutus poistuu aikajanalta ja järjestelmästä.</span></p> -->
-      <p><span class="label label-danger" style="white-space: normal; line-height: 2;">Poiston jälkeen liikennöintisopimus / kilpailutus poistuu aikajanalta ja järjestelmästä. Toimintoa ei voi peruuttaa.</span></p>
-    </div>
+  <p>Oletko varma, että haluat poistaa kyseisen liikennöintisopimuksen / kilpailutuksen?</p>
+
+  <div class="alert alert-warning">
+    <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
+    Poiston jälkeen liikennöintisopimus / kilpailutus poistuu aikajanalta ja järjestelmästä.
+    Toimintoa ei voi peruuttaa.
   </div>
 </div>
 <div class="modal-footer">
